--- a/oneweb/css/main.css
+++ b/oneweb/css/main.css
@@ -1446,26 +1446,31 @@ line-height: 48px;font-weight: 100;}
 .cover_nav li a{
 	color: #FFFFFF;
 	font-weight:700!important;
+	position: fixed;
+	width: 100%;
+	height: 24px;
 }
 .cover_nav li {
 	width: 100%;
 	font-family: SourceSansPro-Bold;
 	font-size: 16px;
 	color: #FFFFFF;
-	letter-spacing: 0.8px;
 	text-align: center;
 	z-Index: 100;
 	height: 32px;
     line-height: 16px;
+	top: 140px;
 }
 .nav__trigger {
+	position: fixed;
     display: block;
     width: 30px;
     height: 30px;
-    right: 10px;
-    top: 10px;
     z-index: 200;
-	margin: 59px auto;
+	margin-top: 59px;
+	margin-bottom: 59px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .nav__icon {
     display: inline-block;
@@ -1489,8 +1494,7 @@ line-height: 48px;font-weight: 100;}
 	left: 50%;
 	transform: translateX(-50%);
 }
-
-.nav_search input{
+.nav_search .rich{
 	font-family: SourceSansPro-Bold!important;
 	font-size: 16px;
 	color: #FFFFFF!important;
@@ -1509,3 +1513,21 @@ line-height: 48px;font-weight: 100;}
 #ascrail2000 div{background-color:#C91A1E!important;}
 .sp-image{background-image: url(../images/slider/1.png);background-repeat: no-repeat;
 	    background-position: center;background-size: 100% 100%;}
+.rich{
+	color: #FFFFFF;
+	width:100%;
+	height:100%;
+	overflow: hidden;
+}
+.rich:empty:before{
+	content: attr(data-placeholder);
+	font-family: SourceSansPro-It!important;
+	font-size: 14px;
+	color: #FFFFFF;
+}
+.rich:focus:before{
+	content:none;
+}
+.rich:focus{
+	outline:none;
+}
