--- a/oneweb/css/responsive.css
+++ b/oneweb/css/responsive.css
@@ -222,8 +222,8 @@
 	}
 	.clean-section-header h1 span {
 		font-family: SourceSansPro-Regular !important;
-		font-weight: 200;
-		font-size: 32px;
+		font-weight: 200!important;
+		font-size: 32px!important;
 		line-height: 40px;
 		color:#4B4B4B;
 	}
@@ -641,8 +641,8 @@
 	/* 主题字体大小 */
 	.clean-section-header h1 span {
 		font-family: SourceSansPro-Regular !important;
-		font-weight: 200;
-		font-size: 20px;
+		font-weight: 200!important;
+		font-size: 32px!important;
 		line-height: 40px;
 		color:#4B4B4B;
 	}
